# phoenixlang

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  THIRD-PARTY-NOTICES.md  cliff.toml  install.sh  phoenix.toml.example
crates/phoenix-bench/: Cargo.toml
crates/phoenix-bench-diff/: Cargo.toml
crates/phoenix-bench-diff/src/: baseline.rs  commands.rs  criterion_walk.rs  lib.rs  main.rs  pause.rs  routing.rs  test_support.rs
crates/phoenix-bench/benches/: allocation.rs  collections.rs  pipeline.rs
crates/phoenix-bench/benches/fixtures/: empty.phx  large.phx  medium.phx  medium_large.phx  parse_error.phx  small.phx  type_error.phx
crates/phoenix-bench/src/: harness.rs  lib.rs
crates/phoenix-bench/tests/: fixture_validity.rs
crates/phoenix-codegen/: Cargo.toml  README.md
crates/phoenix-codegen/src/: go.rs  go_tests.rs  iso4217.rs  lib.rs  openapi.rs  python.rs  python_tests.rs  typescript.rs  typescript_tests.rs
crates/phoenix-codegen/src/python/: format.rs
crates/phoenix-codegen/src/snapshots/: phoenix_codegen__go__tests__go_binary_resp_client.snap  phoenix_codegen__go__tests__go_binary_resp_handlers.snap  phoenix_codegen__go__tests__go_binary_resp_server.snap  phoenix_codegen__go__tests__go_binary_resp_types.snap  phoenix_codegen__go__tests__go_body_no_response_client.snap  phoenix_codegen__go__tests__go_body_no_response_handlers.snap  phoenix_codegen__go__tests__go_chi_server_full_surface.snap  phoenix_codegen__go__tests__go_enum.snap  phoenix_codegen__go__tests__go_enum_response_client.snap  phoenix_codegen__go__tests__go_float_enum_query_client.snap  phoenix_codegen__go__tests__go_float_enum_query_handlers.snap  phoenix_codegen__go__tests__go_float_enum_query_server.snap  phoenix_codegen__go__tests__go_float_enum_query_types.snap  phoenix_codegen__go__tests__go_get_client.snap  phoenix_codegen__go__tests__go_get_handler.snap  phoenix_codegen__go__tests__go_get_server.snap  phoenix_codegen__go__tests__go_map_bool_float_types.snap  phoenix_codegen__go__tests__go_multi_client.snap  phoenix_codegen__go__tests__go_multi_handlers.snap  phoenix_codegen__go__tests__go_multi_path_client.snap  phoenix_codegen__go__tests__go_multi_server.snap  (+268 more)
crates/phoenix-codegen/tests/: compiles_and_lints.rs  go_integration.rs  integration.rs  python_integration.rs  roundtrip.rs
crates/phoenix-cranelift/: Cargo.toml
crates/phoenix-cranelift/src/: abi.rs  builtins.rs  context.rs  error.rs  extern_abi.rs  lib.rs  link.rs  target.rs  type_tag.rs  types.rs
crates/phoenix-cranelift/tests/: compile_basic.rs  compile_closures.rs  compile_default_args.rs  compile_dyn_trait.rs  compile_enums.rs  compile_errors.rs  compile_generic_structs.rs  compile_generics.rs  compile_lists.rs  compile_maps.rs  compile_option_methods.rs  compile_result_methods.rs  compile_string_methods.rs  compile_structs.rs  compile_trait_bounds.rs  compile_wasm_gc.rs  compile_wasm_linear.rs  extern_js_native.rs
crates/phoenix-driver/: Cargo.toml  README.md
crates/phoenix-driver/src/: build.rs  config.rs  js_deps.rs  lib.rs  main.rs  manifest.rs  pkg_cli.rs
crates/phoenix-driver/tests/: advanced.rs  backend_matrix.rs  basic.rs  build_cli.rs  collections.rs  enums_and_matching.rs  error_handling.rs  extern_js_cli.rs  extern_js_glue.rs  fixture_inventory.rs  functions_and_closures.rs  gc_bounded_memory.rs  gc_valgrind.rs  gen_cli.rs  gen_schema_fixtures.rs  help_parity.rs  init_add_cli.rs  interop_browser.rs  interop_matrix.rs  interop_node.rs  js_deps_cli.rs  json_encode_cli.rs  multi_module_cli.rs  multi_module_matrix.rs  multi_module_negative.rs  multi_package_cli.rs  package_resolve.rs  run_ir_cli.rs  strings.rs  three_backend_matrix.rs  traits.rs  traits_dyn.rs  types_and_structs.rs
crates/phoenix-interp/: Cargo.toml
crates/phoenix-interp/src/: env.rs  eval_builtins.rs  interpreter.rs  lib.rs  value.rs
crates/phoenix-ir/: Cargo.toml
crates/phoenix-ir-interp/: Cargo.toml
crates/phoenix-ir-interp/src/: builtins.rs  error.rs  interpreter.rs  lib.rs  value.rs
crates/phoenix-ir-interp/tests/: roundtrip_basic.rs  roundtrip_closures.rs  roundtrip_collections.rs  roundtrip_dyn_trait.rs  roundtrip_errors.rs  roundtrip_extern_js.rs  roundtrip_generics.rs  roundtrip_option_result.rs  roundtrip_structs.rs
crates/phoenix-ir/src/: block.rs  default_wrappers.rs  display.rs  instruction.rs  json_synth.rs  lib.rs  lower.rs  lower_decl.rs  lower_dyn.rs  lower_expr.rs  lower_match.rs  lower_stmt.rs  module.rs  monomorphize.rs  terminator.rs  tests.rs  types.rs  value_alloc.rs  verify.rs
crates/phoenix-ir/tests/: lower_dyn_trait.rs  sema_ir_id_alignment.rs
crates/phoenix-lexer/: Cargo.toml
crates/phoenix-lexer/src/: lexer.rs  lib.rs  token.rs
crates/phoenix-lsp/: Cargo.toml  README.md
crates/phoenix-lsp/scripts/: latency.sh
crates/phoenix-lsp/src/: convert.rs  handlers.rs  main.rs  project.rs  state.rs
crates/phoenix-modules/: Cargo.toml  README.md
crates/phoenix-modules/src/: lib.rs
crates/phoenix-parser/: Cargo.toml
crates/phoenix-parser/src/: api_version.rs  ast.rs  expr.rs  free_vars.rs  lib.rs  parser.rs  stmt.rs  types.rs
crates/phoenix-runtime/: Cargo.toml  README.md
crates/phoenix-runtime/src/: json.rs  lib.rs  list_builder_methods.rs  list_methods.rs  map_builder_methods.rs  map_methods.rs  string_methods.rs
crates/phoenix-runtime/tests/: gc_collects.rs
crates/phoenix-sema/: Cargo.toml
crates/phoenix-sema/src/: check_annotations.rs  check_builtins_list.rs  check_builtins_map.rs  check_builtins_option.rs  check_builtins_result.rs  check_builtins_string.rs  check_endpoint.rs  check_expr.rs  check_expr_call.rs  check_register.rs  check_stmt.rs  check_types.rs  checker.rs  checker_tests.rs  defer.rs  expr_walk.rs  field_privacy.rs  id_alloc.rs  impl_classify.rs  import_resolve.rs  lib.rs  module_scope.rs  object_safety.rs  orphan.rs  resolved.rs  scope.rs  types.rs
crates/phoenix-sema/tests/: check_modules.rs  check_modules_callable.rs  check_modules_coherence.rs  check_modules_foundation.rs  check_modules_imports.rs  resolved_module_ids.rs
(+502 files in other folders)
