[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/rmsap/phoenixlang"

[profile.test]
debug = 0

[workspace.dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# File watching
notify = "6.1"

# LSP server
tower-lsp = "0.20"
tokio = { version = "1", features = ["io-std", "macros", "rt"] }

# Testing
insta = { version = "1", features = ["glob"] }

# Serialization (AST dumps, debugging)
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Configuration
toml = "0.8"

# Native code generation
cranelift-codegen = "0.116"
cranelift-frontend = "0.116"
cranelift-module = "0.116"
cranelift-object = "0.116"
target-lexicon = "0.13"

# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }
