[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/rmsap/phoenixlang"

[profile.test]
debug = 0

# The shipped binaries (release.yml builds with `cargo build --release`) keep
# integer-overflow checks ON. Rust's default release profile *wraps* on
# overflow; for a compiler doing layout math, offsets, and IR indexing, a
# silent wrap is a miscompile that produces a wrong artifact rather than a loud
# failure. This is the production safety net for arithmetic bugs the test suite
# doesn't cover. Note: this only affects the Rust compiler + `phoenix-runtime`,
# NOT the arithmetic in end-users' compiled Phoenix programs (that is
# Cranelift-generated and governed separately). Because `phoenix-runtime`
# ships as `libphoenix_runtime.a` linked into end-user programs, this DOES
# change runtime behavior for them: an internal overflow in a runtime helper
# now panics (aborts the user program with a message) rather than wrapping
# silently — the intended safety posture, surfacing a runtime bug loudly
# instead of corrupting data. It also means `cargo test --release` inherits
# overflow checking, so the release-profile CI gates below actually detect
# overflow rather than silently wrapping past it.
[profile.release]
overflow-checks = true

[workspace.dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# File watching
notify = "6.1"

# LSP server
tower-lsp = "0.20"
tokio = { version = "1", features = ["io-std", "macros", "rt"] }

# Observability (LSP latency tracing). The `json` feature emits one
# structured event per span close (with `time.busy`/`time.idle` in
# nanoseconds) so latencies can be aggregated offline; `env-filter`
# lets the verbosity be tuned at runtime via the `PHOENIX_LSP_LOG`
# env var without a rebuild.
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Testing
insta = { version = "1", features = ["glob"] }

# Serialization (AST dumps, debugging)
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Configuration
toml = "0.8"

# Package manager. `semver` validates `[package] version` and solves
# dependency version constraints; `gix` (pure-Rust git — no libgit2) clones
# git-sourced dependencies into the cache over a rustls HTTPS transport. gix is
# chosen over git2/libgit2 deliberately, for two benefits that hold:
#   * Licensing: libgit2 is GPL-2.0-with-linking-exception, whereas gix and its
#     rustls stack are permissively licensed (MIT/Apache-2.0/ISC) — no copyleft.
#   * No system OpenSSL: rustls replaces it, so the binary carries no runtime
#     `libssl`/`libcrypto` shared-library dependency and stays self-contained.
# Caveat (it is *not* "pure Rust all the way down"): rustls's default crypto
# provider here is `aws-lc-rs`, whose `aws-lc-sys` is C (AWS-LC). It is vendored
# and statically linked at build time — no runtime/system dependency — but it
# does mean a C compiler is required when building, including for the aarch64
# cross target in the release matrix (which installs a cross C toolchain for
# exactly this). reqwest 0.13's rustls transport exposes no `ring` alternative,
# so the C-free `ring` provider isn't reachable through this stack today.
# `toml_edit` performs format-preserving `phoenix.toml` edits for `phoenix add`
# (preserving comments/layout a parse-and-reserialize would discard).
semver = "1"
toml_edit = "0.22"
# Keep gix's (pure-Rust) defaults — sha1, zlib, parallel, revision/index — and
# add only the blocking rustls HTTPS transport and worktree checkout we need.
gix = { version = "0.85", features = [
    "blocking-network-client",
    "blocking-http-transport-reqwest-rust-tls",
    "worktree-mutation",
] }

# Native code generation
cranelift-codegen = "0.116"
cranelift-frontend = "0.116"
cranelift-module = "0.116"
cranelift-object = "0.116"
target-lexicon = "0.13"

# WebAssembly code generation. Cranelift does not emit `wasm32` as a
# target ISA (its `wasm32` support is *input*-side: it consumes WASM
# modules for wasmtime). The reverse direction goes through the
# Bytecode Alliance's `wasm-encoder` (binary writer), `wasmparser`
# (validation), and `wasmprinter` (disassembly for tests) — all
# shipped alongside wasmtime and version-locked together. The three
# crates ship at one synchronized release per wasmtime cut and a patch
# mismatch between them is a known-bad pattern, so the `=` requirement
# operator pins all three direct deps to the exact same revision so
# they advance together; bumping any one without the others (or
# loosening to a caret/tilde requirement that would let them drift
# independently) has bitten downstream projects in the past. To bump:
# change all three versions in this block together, then
# `cargo update -p` each so the lockfile picks up the matched set.
#
# Note: this lockstep applies only to the three *direct* deps below.
# Cranelift transitively brings its own (older) `wasm-encoder` and
# `wasmparser` for its input-side WASM parsing (currently 0.244.x at
# the time of writing), so `cargo tree` will show two copies of each
# crate in the build graph. That duplication is benign — Cranelift's
# copies are used only on the consumer side and never share types
# with our emitter pipeline — but it does mean bumping the workspace
# triple here does *not* update Cranelift's transitive pair. See
# `docs/design-decisions.md` §Phase 2.4 decision A0.
# `wasm-encoder`'s `wasmparser` feature exposes `wasm_encoder::reencode`,
# which the embed-and-merge step ([decision F](docs/design-decisions.md))
# uses to copy pre-compiled `phoenix_runtime.wasm` function bodies into
# the user-program module while remapping every index reference. Without
# this feature the `Reencode` trait is unreachable and we'd have to
# hand-roll the wasmparser::Operator → wasm_encoder::Instruction
# translator for every instruction — pure busywork given the canonical
# helper exists. Docs: <https://docs.rs/wasm-encoder/0.248.0/wasm_encoder/reencode/>.
wasm-encoder = { version = "=0.248.0", features = ["wasmparser"] }
wasmparser = "=0.248.0"
wasmprinter = "=0.248.0"

# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }

# Test scratch directories (used by phoenix-modules and phoenix-lsp tests)
tempfile = "3"

# Float formatting (shortest-roundtrip d2s in scientific notation). Used by
# `phoenix-runtime::format_f64` for the canonical native output, by the
# `phoenix-interp` / `phoenix-ir-interp` Float Display impls so interpreted
# output matches it byte-for-byte, and as the reference implementation that
# wasm32-gc's `phx_print_f64` ports verbatim (precomputed POW5 tables + d2s
# algorithm + scientific emission). Same format on every backend →
# byte-for-byte matrix consistency.
# See `docs/design-decisions.md` §Phase 2.4 decision K.6.
ryu = "1.0"
