[package]
name = "phoenix-cranelift"
description = "Phoenix compiler code-generation backends (native via Cranelift, WebAssembly via wasm-encoder)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
phoenix-ir = { path = "../phoenix-ir" }
# The WASM backend uses `phoenix_runtime::gc::TypeTag` discriminants
# at codegen time (passed as the second argument to `phx_gc_alloc`).
# Linking the runtime crate as a library — rather than mirroring the
# discriminants as local constants — keeps the codegen and the runtime
# in lockstep at compile time. The runtime crate has no transitive
# deps, so the cost is negligible.
phoenix-runtime = { path = "../phoenix-runtime" }
cranelift-codegen = { workspace = true }
cranelift-frontend = { workspace = true }
cranelift-module = { workspace = true }
cranelift-object = { workspace = true }
target-lexicon = { workspace = true }
# WASM emission pipeline; the lockstep rationale lives in the
# workspace `Cargo.toml`. `src/wasm/mod.rs` is the entry point.
wasm-encoder = { workspace = true }
wasmparser = { workspace = true }

# `cc::windows_registry` locates the MSVC `link.exe` plus its LIB/INCLUDE
# environment the way rustc does, so native Windows linking works without a
# Developer Command Prompt (VS Build Tools is the only prerequisite). Windows
# hosts only — used by `link.rs`'s `run_linker`; see `docs/windows-native-link.md`.
[target.'cfg(windows)'.dependencies]
cc = "1"

[dev-dependencies]
phoenix-common = { path = "../phoenix-common" }
phoenix-lexer = { path = "../phoenix-lexer" }
phoenix-parser = { path = "../phoenix-parser" }
phoenix-sema = { path = "../phoenix-sema" }
phoenix-interp = { path = "../phoenix-interp" }
phoenix-ir-interp = { path = "../phoenix-ir-interp" }
insta = { workspace = true }
# WAT disassembly for integration-test assertions; same version
# lockstep as `wasm-encoder` / `wasmparser` (see workspace `Cargo.toml`).
wasmprinter = { workspace = true }
tempfile = { workspace = true }
