[package]
name = "phoenix-driver"
description = "CLI driver for the Phoenix programming language"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "phoenix"
path = "src/main.rs"

[dependencies]
phoenix-common = { path = "../phoenix-common" }
phoenix-lexer = { path = "../phoenix-lexer" }
phoenix-modules = { path = "../phoenix-modules" }
phoenix-parser = { path = "../phoenix-parser" }
phoenix-sema = { path = "../phoenix-sema" }
phoenix-interp = { path = "../phoenix-interp" }
phoenix-ir = { path = "../phoenix-ir" }
phoenix-ir-interp = { path = "../phoenix-ir-interp" }
phoenix-codegen = { path = "../phoenix-codegen" }
phoenix-cranelift = { path = "../phoenix-cranelift" }
clap = { workspace = true }
notify = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
cargo-husky = { version = "1", default-features = false, features = ["user-hooks"] }

# Linux-only: needed to set RLIMIT_AS in the child process before exec, so
# the alloc-bounded-memory test can prove the GC actually collects (the
# child OOMs if it leaks instead of sweeping unrooted allocations).
[target.'cfg(target_os = "linux")'.dev-dependencies]
libc = "0.2"
