[package]
name = "phoenix-driver"
description = "CLI driver for the Phoenix programming language"
readme = "README.md"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "phoenix_driver"
path = "src/lib.rs"

[[bin]]
name = "phoenix"
path = "src/main.rs"

[[bin]]
name = "phoenix-gen"
path = "src/bin/phoenix-gen.rs"

[dependencies]
phoenix-common = { path = "../phoenix-common" }
phoenix-lexer = { path = "../phoenix-lexer" }
phoenix-modules = { path = "../phoenix-modules" }
phoenix-parser = { path = "../phoenix-parser" }
phoenix-sema = { path = "../phoenix-sema" }
phoenix-interp = { path = "../phoenix-interp" }
phoenix-ir = { path = "../phoenix-ir" }
phoenix-ir-interp = { path = "../phoenix-ir-interp" }
phoenix-codegen = { path = "../phoenix-codegen" }
phoenix-cranelift = { path = "../phoenix-cranelift" }
clap = { workspace = true }
notify = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
cargo-husky = { version = "1", default-features = false, features = ["user-hooks"] }
tempfile = { workspace = true }

# Linux-only: needed to set RLIMIT_AS in the child process before exec —
# gc_bounded_memory.rs proves the GC actually collects (the child OOMs if it
# leaks instead of sweeping unrooted allocations), and gen_schema_fixtures.rs
# caps `phoenix check` so the parser error-recovery OOM dies fast instead of
# thrashing the host until the wall-clock timeout.
[target.'cfg(target_os = "linux")'.dev-dependencies]
libc = "0.2"
