[package]
name = "phoenix-interp"
description = "Tree-walk interpreter for the Phoenix programming language"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
phoenix-common = { path = "../phoenix-common" }
phoenix-modules = { path = "../phoenix-modules" }
phoenix-parser = { path = "../phoenix-parser" }
# JSON string escaping — `json.encode` of a `String` routes through
# `phoenix_runtime::json_escape`, the single source of truth shared with
# the compiled backends so JSON output is byte-identical.
phoenix-runtime = { path = "../phoenix-runtime" }
phoenix-sema = { path = "../phoenix-sema" }
# JSON DOM parsing for `json.decode` — the tree-walk interpreter decodes a
# `serde_json::Value` into a typed `Value`, matching the compiled backends.
serde_json.workspace = true
# Float formatting — shared shortest-roundtrip d2s implementation. The
# interpreter's `Display for Value::Float` routes through this so that
# `phoenix run` (interpreted) and `phoenix build` (native, via
# phoenix-runtime::format_f64) emit byte-identical Float output. The
# wasm32-gc backend ports the same algorithm. See
# `docs/design-decisions.md` §Phase 2.4 K.6.
ryu.workspace = true

[dev-dependencies]
phoenix-lexer = { path = "../phoenix-lexer" }
