[package]
name = "phoenix-ir-interp"
description = "IR-level interpreter for round-trip verification of Phoenix IR lowering"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
phoenix-common = { path = "../phoenix-common" }
phoenix-ir = { path = "../phoenix-ir" }

[dev-dependencies]
phoenix-lexer = { path = "../phoenix-lexer" }
phoenix-parser = { path = "../phoenix-parser" }
phoenix-sema = { path = "../phoenix-sema" }
phoenix-interp = { path = "../phoenix-interp" }
insta = { workspace = true }
