[package]
name = "phoenix-ir"
description = "SSA-style intermediate representation for the Phoenix compiler"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
phoenix-common = { path = "../phoenix-common" }
phoenix-modules = { path = "../phoenix-modules" }
phoenix-parser = { path = "../phoenix-parser" }
phoenix-sema = { path = "../phoenix-sema" }

[dev-dependencies]
phoenix-lexer = { path = "../phoenix-lexer" }
insta = { workspace = true }
