[package]
name = "phoenix-ir"
description = "SSA-style intermediate representation for the Phoenix compiler"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
phoenix-common = { path = "../phoenix-common" }
phoenix-modules = { path = "../phoenix-modules" }
phoenix-parser = { path = "../phoenix-parser" }
phoenix-sema = { path = "../phoenix-sema" }

[dev-dependencies]
phoenix-lexer = { path = "../phoenix-lexer" }
# Test-only: `json_synth.rs` mirrors the runtime's node-kind ABI constants
# (`JSON_KIND_*`) and a lockstep test asserts the mirror can't drift — the
# same scheme as the list-header layout check.
phoenix-runtime = { path = "../phoenix-runtime" }
insta = { workspace = true }
