# Tool configuration for the Phoenix Gen Python compile-and-lint scaffold.
#
# The harness writes generated *.py into generated/ and runs:
#   black --check generated/   (formatting; black defaults — generator matches)
#   ruff check generated/      (lint; strict ruleset, see [tool.ruff] below)
#   mypy generated/            (types; strict mode, see [tool.mypy] below)

[project]
name = "phoenix-gen-python-scaffold"
version = "0.0.0"
description = "Compile-and-lint scaffold for Phoenix Gen's Python target."
requires-python = ">=3.10"

[tool.black]
# Black defaults (line-length 88, double quotes). The generator is fixed to
# match black rather than configuring black away from its defaults.

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
# Strict-ish ruleset (roadmap §5: "ruff check strict, no findings"). We enable
# the recommended correctness/bug-prone families plus import sorting, comprehension,
# pyupgrade, naming and bugbear checks.
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort (import ordering)
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "RUF", # ruff-specific rules
]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's dependency markers are *meant* to be called in argument defaults
# (`x: T = Query(...)` / `Header(...)` / `Depends(...)`) — that is the framework's
# documented DI form, and the values are immutable. ruff's built-in B008 FastAPI
# heuristic recognizes this only for a fixed set of param types (str/int/bool/…),
# so a `datetime` (or other non-built-in) `Header`/`Query` param trips B008 even
# though the code is correct. Listing the markers here is the standard FastAPI +
# ruff configuration and exempts every dependency-marker default regardless of the
# parameter's type. See docs/phoenix-gen.md (Python target → ruff).
extend-immutable-calls = [
    "fastapi.Body",
    "fastapi.Cookie",
    "fastapi.Depends",
    "fastapi.File",
    "fastapi.Form",
    "fastapi.Header",
    "fastapi.Path",
    "fastapi.Query",
    "fastapi.Security",
]

[tool.mypy]
# Strict mode: every real type bug (undefined names, missing imports, wrong
# types, untyped defs) must be fixed in the generator, not silenced here.
strict = true
# FastAPI route decorators (`@router.get(...)`) are typed as returning a generic
# decorator that mypy cannot prove preserves the precise function type, so each
# decorated route is flagged as "untyped decorator makes function untyped".
# This is inherent to the FastAPI decorator pattern, not a generator bug, so we
# allow it specifically rather than blanket-disabling mypy.
disallow_untyped_decorators = false
